--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,21 +7,15 @@
     Atm. it is near what I wanted, but why the h*** my Settings Activity got an icon on top is beyond my understanding.
     -->
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Holo">
-        <item name="android:colorPrimary">@color/popularmovies_red</item>
-        <item name="android:colorPrimaryDark">@color/popularmovies_darkred</item>
+    <!-- Base application theme -->
+    <style name="AppTheme" parent="@style/Theme.AppCompat" />
+
+    <!-- Settings theme -->
+    <style name="SettingsTheme" parent="@android:style/Theme.Holo">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:displayOptions">showHome|homeAsUp|showTitle</item>
     </style>
-
-    <!-- Main activity theme. -->
-    <style name="PosterTheme" parent="@style/Theme.AppCompat">
-        <item name="android:colorPrimary">@color/popularmovies_red</item>
-        <item name="android:colorPrimaryDark">@color/popularmovies_darkred</item>
-    </style>
-
 </resources>
